# c-labs

hw-02_huffman/: CMakeLists.txt
hw-02_huffman/include/: huffman_archiver.h  huffman_tree.h  huffman_unarchiver.h  util.h
hw-02_huffman/src/: huffman_archiver.cpp  huffman_tree.cpp  huffman_unarchiver.cpp  main.cpp  util.cpp
hw-02_huffman/test/: huffman_archiver_test.cpp  huffman_tree_test.cpp  huffman_unarchiver_test.cpp  util_test.cpp
hw-02_huffman/test/archive_test/: sometxt.txt
lab-01_makefile/: Makefile  Solution.md
lab-01_makefile/include/: algorithm.h  io.h
lab-01_makefile/src/: algorithm.c  io.c  main.c  util.c
lab-02_cstrings/: Makefile
lab-02_cstrings/include/: str.h
lab-02_cstrings/src/: str.c  test.c  test_str.c
lab-03_mergesort/: Makefile
lab-03_mergesort/include/: mergesort.h
lab-03_mergesort/src/: main.c  mergesort.c
lab-04_intrusive-list/: Makefile  lab-04_intrusive-list
lab-04_intrusive-list/include/: clist.h
lab-04_intrusive-list/src/: clist.c  main.c
lab-05_c-io/: Makefile  lab-05_c-io
lab-05_c-io/include/: clist.h  point_list.h
lab-05_c-io/src/: clist.c  main.c  point_list.c
lab-06_int-vector/: Makefile
lab-06_int-vector/include/: my_vector.hpp
lab-06_int-vector/src/: my_vector.cpp
lab-07_matrix/: Makefile  lab-07_matrix
lab-07_matrix/include/: matrix.h
lab-07_matrix/src/: matrix.cpp
lab-08_shared-ptr/: Makefile
lab-08_shared-ptr/include/: matrix.hpp  shared_ptr.hpp
lab-08_shared-ptr/src/: matrix.cpp  shared_ptr.cpp
lab-09_figures/: CMakeLists.txt
lab-09_figures/include/: Circle.hpp  Rectangle.hpp  Scheme.hpp
lab-09_figures/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  Scheme.cpp  main.cpp
lab-10_cppio/: CMakeLists.txt
lab-10_cppio/include/: bin_manip.h  employees.h
lab-10_cppio/src/: bin_manip.cpp  employees.cpp  main.cpp
lab-11_vector/: CMakeLists.txt
lab-11_vector/include/: my_vector.hpp  my_vector_impl.hpp
lab-11_vector/src/: main.cpp
lab-12_exceptions/: CMakeLists.txt
lab-12_exceptions/include/: matrix.hpp
lab-12_exceptions/src/: main.cpp  matrix.cpp
lab-13_array/: CMakeLists.txt
lab-13_array/include/: my_array.h
lab-13_array/src/: main.cpp
lab-14_linq/: CMakeLists.txt
lab-14_linq/include/: linq.hpp
lab-14_linq/src/: test.cpp
